# pyproject.toml
[project]
name = "comfy_fetch_file_node" # Unique identifier for your node. Immutable after creation.
description = "A simple node to fetch a file and put it in a specific path"
version = "0.1.0" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/ultrafro/comfy_fetch_file_node"

[tool.comfy]
PublisherId = "ultrafro" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "Fetch File Node" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)